...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        </org.akvo.flow.ui.view.geolocation.GeoInputContainer>

        <LinearLayout
                android:id="@+id/auto_geo_location_progress"
                android:orientation="horizontal"
                tools:visibility="visible"
                android:visibility="gone"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
...
        </LinearLayout>


    </FrameLayout>

    <Button
            android:id="@+id/geo_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/getgeo"
            style="@style/FormButtonStyle"/>

</merge>
...
